# DecodeLZW

./: .gitignore  DecodingText.cabal  README.md
src/: Huffman.hs  LZW.hs  Main.hs
test/: Spec.hs
